fixing overflow on mobile

--- a/client/src/components/MassageInfo/MassageInfo.css
+++ b/client/src/components/MassageInfo/MassageInfo.css
@@ -33,6 +33,7 @@
   animation: card-fade-in 1s forwards;
   overflow-y: hidden;
   overflow-x: hidden;
+  position: absolute;
 }
 
 @keyframes card-fade-in {
